[project]
name = "paulstretch"
version = "0.1.0"
description = "Paul's Extreme Sound Stretch (Paulstretch) - Python version"
readme = "README"
license = { text = "Public Domain" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.11",
]

[project.scripts]
paulstretch = "paulstretch.stereo:main"
paulstretch-mono = "paulstretch.mono:main"
paulstretch-newmethod = "paulstretch.newmethod:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paulstretch"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
